--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -69,7 +69,7 @@
    ],
    "source": [
     "%run main.py --n_GPUs 1 --batch_size 8 --save_dir GOPRO_TMP --dataset GOPRO_Large --data_root /notebooks/dataset\n",
-    "!python main.py --n_GPUs 1 --batch_size 20 --save_dir GOPRO_TMP --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet"
+    "!python main.py --n_GPUs 1 --batch_size 28 --save_dir GOPRO_TMP --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 71"
    ]
   },
   {
