--- a/src/eval.ipynb
+++ b/src/eval.ipynb
@@ -7,8 +7,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python main.py --save_dir GOPRO_L1 --demo true --demo_input_dir /notebooks/dataset/GOPRO_Large/test/GOPR0384_11_00/blur_gamma"
+    "python main.py --n_GPUs 1 --save_dir GOPRO_TMP --demo true --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7bbd2de8-fd8f-480b-a5ad-feed917aed30",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (873198519.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    python main.py --n_GPUs 1 --save_dir GOPRO_TMP --do_train false --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "python main.py --n_GPUs 1 --save_dir GOPRO_TMP --do_train false --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 10 --start_epoch 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ce164d-5c7b-4626-b0b2-856552d1bd8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
