--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -23,7 +23,8 @@
     "!python main.py --n_GPUs 1 --batch_size 110 --save_dir GOPRO_TMP --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 71 --patch_size 128 --validate_every 5\n",
     "\n",
     "# A100\n",
-    "python main.py --n_GPUs 1 --batch_size 200 --num_workers 11 --save_dir GOPRO_128_1000 --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 1000 --patch_size 128 --validate_every 10 --save_results all"
+    "python main.py --n_GPUs 1 --batch_size 200 --num_workers 11 --save_dir GOPRO_128_1000 --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 1000 --patch_size 128 --validate_every 10 --save_results all\n",
+    "python main.py --n_GPUs 1 --batch_size 80 --num_workers 11 --save_dir GOPRO_128_3Tblocks --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 600 --patch_size 128 --validate_every 10 --save_results all"
    ]
   },
   {
@@ -33,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python main.py --n_GPUs 1 --batch_size 128 --save_dir GOPRO_TMP --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 71 --patch_size 64 --validate_every 1"
+    "python main.py --n_GPUs 1 --batch_size 45 --num_workers 11 --save_dir GOPRO_128_3Tblocks_llr --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 600 --patch_size 128 --save_results all --lr 2e-4"
    ]
   },
   {
@@ -44,7 +45,21 @@
    "outputs": [],
    "source": [
     "# train MSNet\n",
-    "python main.py --n_GPUs 1 --batch_size 140 --save_dir GOPRO_128_MSResNet --dataset GOPRO_Large --data_root /notebooks/dataset --model MSResNet --end_epoch 1000 --patch_size 128"
+    "python main.py --n_GPUs 1 --batch_size 140 --save_dir GOPRO_128_MSResNet --dataset GOPRO_Large --data_root /notebooks/dataset --model MSResNet --end_epoch 600 --patch_size 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72657373-0e92-4f48-adeb-ca479e81b120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train using less ResNet Block\n",
+    "python main.py --n_GPUs 1 --batch_size 70 --num_workers 11 --save_dir GOPRO_128_9R3L --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 600 --patch_size 128 --n_resblocks 9\n",
+    "# Using larger lr\n",
+    "python main.py --n_GPUs 1 --batch_size 70 --num_workers 7 --save_dir GOPRO_128_9R3L_llr --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 600 --patch_size 128 --n_resblocks 9 --lr 2e-4\n",
+    "python main.py --n_GPUs 1 --batch_size 70 --num_workers 11 --save_dir GOPRO_128_9R3L_llr_5e4 --dataset GOPRO_Large --data_root /notebooks/dataset --model MSRTNet --end_epoch 600 --patch_size 128 --n_resblocks 9 --lr 5e-4"
    ]
   }
  ],
